package com.team.deminder.deminder.customLayoutComponents;

public class DeadlineLayoutListElement {

    public DeadlineLayoutListElement() {
    }
}
