package com.team.deminder.deminder.customLayoutComponents;

public class SubtaskLayoutListElement {

    public SubtaskLayoutListElement() {
    }
}
