@startuml


title __DEMINDER's Class Diagram__\n

    class DeadlineOverviewPage {
  }


    class MainActivity {
        # onCreate()
    }


  class HostCallbacks {
      + HostCallbacks()
      + onDump()
      + onShouldSaveFragmentState()
      + onGetLayoutInflater()
      + onGetHost()
      + onSupportInvalidateOptionsMenu()
      + onStartActivityFromFragment()
      + onStartActivityFromFragment()
      + onStartIntentSenderFromFragment()
      + onRequestPermissionsFromFragment()
      + onShouldShowRequestPermissionRationale()
      + onHasWindowAnimations()
      + onGetWindowAnimations()
      + onAttachFragment()
      + onFindViewById()
      + onHasView()
  }


  class NonConfigurationInstances {
      ~ custom : Object
      ~ viewModelStore : ViewModelStore
      ~ fragments : FragmentManagerNonConfig
      ~ NonConfigurationInstances()
  }


  class ExtraData {
      + ExtraData()
  }


    class ManageDeadlinePage {
    }


    class SettingsPage {
        + SettingsPage()
    }


  MainActivity -up-|> AppCompatActivity
  MainActivity +-down- HostCallbacks
  MainActivity +-down- NonConfigurationInstances
  MainActivity +-down- ExtraData
  HostCallbacks -up-|> FragmentHostCallback

      class StorageManager {
          + StorageManager()
          + loadSettings()
          + loadDeadlines()
          + saveDeadline()
          + updateSettings()
          + deleteDeadline()
      }
        class DeadlineLayoutListElement {
            + DeadlineLayoutListElement()
        }


        class SubtaskLayoutListElement {
            + SubtaskLayoutListElement()
        }
          class Deadline {
          }


          class Subtask {
              + Subtask()
          }


   package Model {
   }

   package View {
   }

   package Controller {
   }

@enduml